# CryWatchdog

./: CMakeLists.txt  README.md  main.py  pyproject.toml  run.bat
app/: __init__.py  asset_handlers.py  config.py  main_window.py  tasks.py  ui_dialogs.py  utils.py  watcher.py
app/core/: logging.py  signals.py  task_manager.py  utils.py  worker.py
app/data/: ce_params.py
app/services/: asset_handlers.py  index.py  watcher.py
app/tasks/: analyzer.py  cleaner.py  converter.py  duplicates.py  finding.py  lua.py  packer.py  texture_validator.py  tod.py
app/ui/: main_window.py  widgets.py
app/ui/dialogs/: cleaner_dlg.py  duplicates_dlg.py  finding_dlg.py  lua_dlg.py  packer_dlg.py  reports_dlg.py  texture_dlg.py  tod_dlg.py
