[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "CryWatchdog"
description = "CryWatchdog"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "kilazz"}]

dependencies = [
    "PySide6>=6.10.2",
    "qdarkstyle>=3.2.3",
    "chardet-rust>=0.1.10",
    "watchfiles>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "snakeviz",
    "py-spy",
    "tabulate2",
    "psutil",
    "tqdm",
]

[tool.ruff]
exclude = [
	"__pycache__",
	"__pypackages__",
	".direnv",
	".eggs",
	".git",
	".git-rewrite",
	".hg",
	".mypy_cache",
	".nox",
	".pants.d",
	".pyenv",
	".pytype",
	".svn",
	".tox",
	"_build",
	"buck-out",
	"build",
	"dist",
	"site-packages",
    ".bzr",
    ".ipynb_checkpoints",
    ".pytest_cache",
    ".vscode",
    "node_modules",
	".ruff_cache",
	"_src_directxtex_decoder",
	"app_data",
	"venv",
	".venv",
]

line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle: errors (e.g., indentation, syntax)
    "W",    # pycodestyle: warnings (e.g., line length)
    "F",    # Pyflakes: logical errors (undefined names, unused imports)
    "I",    # isort: sorting and formatting of imports
    "B",    # flake8-bugbear: finds likely bugs and design problems
    "UP",   # pyupgrade: upgrades syntax to newer Python versions
    "SIM",  # flake8-simplify: suggests simplifications for complex code
    "RUF",  # Enables Ruff's native, fast, and often unique checks
    "PERF", # Perflint: Performance anti-patterns
    "FURB", # Refurb: Modernize Python code
]

ignore = ["E501"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.scikit-build]
wheel.packages = ["app"]
